THRIFT-4631 Fix Ruby codegen to gen valid ruby for recursive structs